fix footer message alignment (#4412)

--- a/component-lib/app/styles/component-lib/base/content/_data-table.scss
+++ b/component-lib/app/styles/component-lib/base/content/_data-table.scss
@@ -33,16 +33,6 @@ $data-table-max-z-index: 1000 !default; /* should be larger than the total # of 
     }
   }
 
-  &.enable-grouping {
-    &-body-row {
-      &.is-last:not(.is-at-grouping-size) {
-        .rsa-data-table-body-cell {
-          padding-bottom: 28px;
-        }
-      }
-    }
-  }
-
   .rsa-form-checkbox-label {
     letter-spacing: 0;
 
